--- a/estilo/style.css
+++ b/estilo/style.css
@@ -69,7 +69,7 @@ nav {
 
 nav > a {
     color: white;
-    padding: 10px;
+    padding: 3px 4.1px 3px 3px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
